# gdt-cpus

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cliff.toml  index.html
.github/workflows/: ci.yml
crates/gdt-cpus/: Cargo.toml
crates/gdt-cpus-sys/: CMakeLists.txt  Cargo.toml  build.rs  cbindgen.toml
crates/gdt-cpus-sys/src/: lib.rs
crates/gdt-cpus/examples/: audio_latency.rs  background_budget.rs  basic_info.rs  frame_jitter.rs  l2_domains.rs  l3_domains.rs  parallel_tasks.rs  reserved_core.rs  streaming_pipeline.rs  thread_priorities.rs
crates/gdt-cpus/examples/support/: mod.rs
crates/gdt-cpus/src/: affinity.rs  affinity_mask.rs  capabilities.rs  cpu.rs  error.rs  lib.rs  platform.rs  priority.rs  realtime.rs
crates/gdt-cpus/src/cpu/: cache_info.rs  cache_level.rs  cache_type.rs  core_info.rs  core_kind.rs  core_type.rs  features.rs  info.rs  l2_domain.rs  l3_domain.rs  lp.rs  mod.rs  socket_info.rs  vendor.rs
crates/gdt-cpus/src/platform/: common_x86_64.rs  fixture_expected.rs  linux.rs  macos.rs  mod.rs  ranges.rs  windows.rs
crates/gdt-cpus/src/platform/linux/: affinity.rs  capabilities.rs  cpu.rs  dbus.rs  mod.rs  realtime.rs  rtkit.rs  scheduling_policy.rs  utils.rs
crates/gdt-cpus/src/platform/linux/cpu/: cache.rs  features.rs  fixture_tests.rs  proc.rs  sysfs.rs  topology.rs
crates/gdt-cpus/src/platform/macos/: affinity.rs  cpu.rs  mod.rs  scheduling_policy.rs  utils.rs
crates/gdt-cpus/src/platform/windows/: affinity.rs  cpu.rs  mod.rs  registry.rs  scheduling_policy.rs  utils.rs
docs/: audio_latency.md  basic_info.md  frame_jitter.md  parallel_tasks.md  streaming_pipeline.md
docs/examples/: audio_latency.md  background_budget.md  basic_info.md  frame_jitter.md  l3_domains.md  reserved_core.md  thread_priorities.md
docs/migrations/: MIGRATION-0.2606.1.md  MIGRATION-0.2606.md
examples/c/basic_info/: CMakeLists.txt  main.c
examples/c/priority/: CMakeLists.txt  main.c
