[package]
name = "gdt-cpus-sys"
version = "25.5.0"
edition = "2024"
authors = ["Artur Wyszyński <artur.wyszynski@wildpixelgames.com>"]
description = "Game Developer's Toolkit for CPU Management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/WildPixelGames/gdt-cpus"
keywords = ["gamedev", "cpu", "affinity", "performance", "threading"]
categories = ["game-engines", "hardware-support"]
readme = "../../README.md"
build = "build.rs"

[dependencies]
gdt-cpus = { path = "../gdt-cpus" }
libc = "0.2.172"

[build-dependencies]
cbindgen = "0.29.0"

[lib]
crate-type = ["staticlib", "cdylib"]
