[package]
name = "gdt-cpus-sys"
version = "25.5.0"
authors = ["Artur Wyszyński <artur.wyszynski@wildpixelgames.com>"]
license = "MIT OR Apache-2.0"
description = "Game Developer's Toolkit for CPU Management"
homepage = "https://github.com/WildPixelGames/gdt-cpus"
repository = "https://github.com/WildPixelGames/gdt-cpus"
documentation = "https://docs.rs/gdt-cpus"
edition = "2024"
readme = "../../README.md"
keywords = ["gamedev", "cpu", "affinity", "performance", "threading"]
categories = ["game-engines", "concurrency", "hardware-support"]
build = "build.rs"
rust-version = "1.86"

[dependencies]
gdt-cpus = "25.5.0"
libc = "0.2.172"

[build-dependencies]
cbindgen = "0.29.0"

[lib]
crate-type = ["staticlib", "cdylib"]
