[package]
name = "gdt-cpus-sys"
version = "0.2606.1"
authors = ["Artur Wyszyński <artur.wyszynski@wildpixelgames.com>"]
license = "MIT OR Apache-2.0"
description = "Game Developer's Toolkit for CPU Management"
homepage = "https://github.com/gdt-tools/gdt-cpus-rs"
repository = "https://github.com/gdt-tools/gdt-cpus-rs"
documentation = "https://docs.rs/gdt-cpus"
edition = "2024"
readme = "../../README.md"
keywords = ["gamedev", "cpu", "affinity", "performance", "threading"]
categories = ["game-engines", "concurrency", "hardware-support"]
build = "build.rs"
rust-version = "1.96"

[dependencies]
gdt-cpus = { version = "0.2606.1", path = "../gdt-cpus", default-features = false }
libc = "0.2.186"

[features]
default = ["rtkit"]
rtkit = ["gdt-cpus/rtkit"]

[build-dependencies]
cbindgen = "0.29.4"

[lib]
crate-type = ["staticlib", "cdylib"]
