[package]
name = "gdt-cpus"
version = "25.12.0"
authors = ["Artur Wyszyński <artur.wyszynski@wildpixelgames.com>"]
license = "MIT OR Apache-2.0"
description = "Game Developer's Toolkit for CPU Management"
homepage = "https://github.com/WildPixelGames/gdt-cpus"
repository = "https://github.com/WildPixelGames/gdt-cpus"
documentation = "https://docs.rs/gdt-cpus"
edition = "2024"
readme = "../../README.md"
keywords = ["gamedev", "cpu", "affinity", "performance", "threading"]
categories = ["game-engines", "concurrency", "hardware-support"]
rust-version = "1.86"

[dependencies]
# Core dependencies
thiserror = "2.0.17" # Error handling
log = "0.4.29"       # Logging
bitflags = "2.10.0"  # Bit flags for CPU features

# Platform-specific dependencies (enabled conditionally)
[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "11.6.0" # CPU ID information for x86_64

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_Foundation",
  "Win32_System_ProcessStatus",
  "Win32_System_Registry",
] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.178"
nix = "0.30.1"   # Unix API calls

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.178"
mach-sys = "0.5.4"         # Mach kernel interfaces
core-foundation = "0.10.1" # Core Foundation interfaces

[dev-dependencies]
env_logger = "0.11.8" # Environment-based logging
rand = "0.9.2"        # Random number generation for tests
flate2 = "1.1.5"      # Compression support for tests
fastrand = "2.3.0"    # Fast random number generation for tests

[features]
default = []
serde = ["dep:serde", "bitflags/serde"] # Serialization support

[dependencies.serde]
version = "1.0.228"
features = ["derive"]
optional = true

[[example]]
name = "basic_info"
path = "examples/basic_info.rs"

[[example]]
name = "audio_latency"
path = "examples/audio_latency.rs"

[[example]]
name = "frame_jitter"
path = "examples/frame_jitter.rs"

[[example]]
name = "parallel_tasks"
path = "examples/parallel_tasks.rs"

[[example]]
name = "streaming_pipeline"
path = "examples/streaming_pipeline.rs"
