[package]
name = "gdt-cpus"
version = "0.2606.1"
authors = ["Artur Wyszyński <artur.wyszynski@wildpixelgames.com>"]
license = "MIT OR Apache-2.0"
description = "Game Developer's Toolkit for CPU Management"
homepage = "https://github.com/gdt-tools/gdt-cpus-rs"
repository = "https://github.com/gdt-tools/gdt-cpus-rs"
documentation = "https://docs.rs/gdt-cpus"
edition = "2024"
readme = "../../README.md"
keywords = ["gamedev", "cpu", "affinity", "performance", "threading"]
categories = ["game-engines", "concurrency", "hardware-support"]
rust-version = "1.96"

[dependencies]
bitflags = "2.13.0" # Bit flags for CPU features

# Platform-specific dependencies (enabled conditionally)
[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "11.6.0" # CPU ID information for x86_64

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_Foundation",
  "Win32_System_ProcessStatus",
  "Win32_System_Registry",
] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.186"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.186"

[features]
default = ["rtkit"]
serde = ["dep:serde", "bitflags/serde"] # Serialization support
# Linux: negotiate priority through rtkit / the xdg realtime portal (hand-rolled
# minimal D-Bus client, no extra dependencies) when direct syscalls are denied.
# Opt out with `default-features = false` - Cargo features are additive, so a
# negative "without_rtkit" feature cannot exist. No effect on other platforms.
rtkit = []

[dependencies.serde]
version = "1.0.228"
features = ["derive"]
optional = true

[[example]]
name = "basic_info"
path = "examples/basic_info.rs"

[[example]]
name = "thread_priorities"
path = "examples/thread_priorities.rs"

[[example]]
name = "audio_latency"
path = "examples/audio_latency.rs"

[[example]]
name = "frame_jitter"
path = "examples/frame_jitter.rs"

[[example]]
name = "l3_domains"
path = "examples/l3_domains.rs"

[[example]]
name = "l2_domains"
path = "examples/l2_domains.rs"

[[example]]
name = "background_budget"
path = "examples/background_budget.rs"

[[example]]
name = "reserved_core"
path = "examples/reserved_core.rs"

[dev-dependencies]
flate2 = { version = "1.1.9", default-features = false, features = ["zlib-rs"] }
